--- a/MobileClient/www/index.html
+++ b/MobileClient/www/index.html
@@ -196,7 +196,7 @@
 				</div>
 			</div>
 
-			<div class="game_view">
+			<div class="game_view" style="bottom: 0px;">
 
 				<div id="GameWorldMap">
 				</div>
@@ -206,12 +206,33 @@
 				</div>
 
 
-				<div id="GameToolbar">
+				<div id="PlayerNameContainer">
+					<span id="PlayerName">
+					</span>
+				</div>
+
+
+				<div id="GameToolbar" class="in_game_toolbar">
 					<button id="BtnGameUnitInfo">I</button>
 					<button id="BtnGameStateInfo">M</button>
 					<span id="LbCredits">0</span>
 					<button id="BtnGameNextTurn">N</button>
 					<button id="BtnGameQuit">X</button>
+				</div>
+
+
+				<div id="AIToolbar" class="in_game_toolbar">
+					<button id="BtnAISlower">-</button>
+					<span id="LbAICredits">0</span>
+					<button id="BtnAIFaster">+</button>
+					<br />
+					<button id="BtnAIPause">Pause</button>
+					<button id="BtnAINext">Next</button>
+					<button id="BtnAIResume">Resume</button>
+					<!--span style="font-size: medium; font-family: Calibri;">
+						<span style="font-weight: bold;">Task:</span>
+						<span id="LbAIAssignmentDesc" ></span>
+					</span-->
 				</div>
 
 			</div>
@@ -348,45 +369,26 @@
 
 			<div id="ToolbarMore" class="toolbar_more" >
 				<button id="BtnConsole" onclick="$('#Console').toggle();">~</button>
-				<button id="BtnRestart">Res</button>
-				<button id="BtnDebug">Debug</button>
-				<button id="BtnAnimationTool" onclick="$('#AnimationInfoTool').toggle(); $('#ToolbarMore').hide();" >Animation Info</button>
-				<button id="BtnFight" onclick="FightRenderingManager.visualizeBattleTest(); $('#ToolbarMore').hide();" style="display: none;">Fight</button>
 
 				<button id="BtnAddress">Address</button>
 				<button id="BtnBrowse" style="display: none;">Browse</button>
 				<input id="TbBrowseAddress" type="text" value="http://nibblebyte.no-ip.org/t" style="display: none;" />
-				<button id="BtnUndo">Undo</button>
-				<button onclick="currentState.loadMap('Dance42');">Dance42</button>
-				<button onclick="currentState.loadMap('HexIsle');">HexIsle</button>
-				<button onclick="currentState.loadMap('UnitTesting');">UnitTesting</button>
 
-			</div>
+				<div class="toolbar_more_sub">
+					<button id="BtnRestart">Res</button>
+					<button id="BtnDebug">Debug</button>
+					<button id="BtnAnimationTool" onclick="$('#AnimationInfoTool').toggle(); $('#ToolbarMore').hide();" >Animation Info</button>
+				</div>
+				<button id="BtnFight" onclick="FightRenderingManager.visualizeBattleTest(); $('#ToolbarMore').hide();" style="display: none;">Fight</button>
 
-			<div id="ToolbarContainer" class="toolbar_bottom_container">
-				<div id="Toolbar" class="toolbar_bottom">
-					<button onclick="$('#ToolbarMore').toggle();">#</button>
+				<div class="toolbar_more_sub">
 					<button id="BtnSave">Save</button>
 					<button id="BtnLoad">Load</button>
-					<button id="BtnPlayer">Player</button>
-					<button id="BtnPlayerType">Set AI</button>
 					<button id="BtnRemoveTile">Rem</button>
+					<button id="BtnUndo">Undo</button>
+					<button id="BtnPlayerType">Set AI</button>
 				</div>
-			</div>
 
-			<div id="AIToolbarContainer" class="toolbar_bottom_container" style="display: none;">
-				<div id="AIToolbar" class="toolbar_bottom">
-					<button id="Button1" onclick="$('#Console').toggle();">~</button>
-					<button id="BtnAIPause">Pause</button>
-					<button id="BtnAINext">Next</button>
-					<button id="BtnAIResume">Resume</button>
-					<button id="BtnAISlower">-</button>
-					<button id="BtnAIFaster">+</button>
-					<span style="font-size: medium; font-family: Calibri;">
-						<span style="font-weight: bold;">Task:</span>
-						<span id="LbAIAssignmentDesc" ></span>
-					</span>
-				</div>
 			</div>
 
 			<div id="ToolbarMoreEditor" class="toolbar_more" >
